--- a/product-service.properties
+++ b/product-service.properties
@@ -1,5 +1,5 @@
 server.port=8081
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://localhost:8761
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=shutterfly
