--- a/eureka-naming-server.properties
+++ b/eureka-naming-server.properties
@@ -1,7 +1,4 @@
 server.port=8761
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=shutterfly
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
