--- a/user-service.properties
+++ b/user-service.properties
@@ -1,4 +1,7 @@
 server.port=8082
+eureka.client.region=default
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
